--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,5 +1,5 @@
 .homepage-background {
-	background-image: url(graphics/210712-Fountain-with-background.gif);
+	background-image: url(/graphics/210712-Fountain-with-background.gif);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -22,7 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(graphics/button2.png);
+    background-image: url(/graphics/button2.png);
 	background-size: 120px 120px;
 	background-repeat: no-repeat;
 	background-position: center;
