Add prev/next room links to gallery hang

--- a/gallery-hang/gallery_hang_style.css
+++ b/gallery-hang/gallery_hang_style.css
@@ -156,3 +156,12 @@ button {
 	background: rgb(27 14 26 / 80%);
 	color: white;
 }
+
+.ig-room-link {
+	position: absolute;
+	bottom: 0;
+}
+
+.ig-next-room {
+	right: 0;
+}
