--- a/gallery-hang/gallery_hang_style.css
+++ b/gallery-hang/gallery_hang_style.css
@@ -16,6 +16,7 @@ body {
 	justify-content: center;
 	align-items: center;
 
+	z-index: 2;
 	opacity: 1;
 	transition: opacity 0.2s ease, height 1s steps(1); /* Fade out, then hide completely */
 }
