--- a/gallery-hang/gallery_hang_style.css
+++ b/gallery-hang/gallery_hang_style.css
@@ -28,7 +28,7 @@ body {
 }
 
 #hang-room-sky, #hang-room-sky-overlay {
-	min-height: 100vh;
+	min-height: 139.4vw; /* Aspect ratio of image * 100 */
 	background-color: #56a0c7;
 	background-image: url('graphics/plain_sky_placeholder.jpg');
 	background-size: cover;
@@ -59,13 +59,15 @@ body {
 }
 
 #hang-room-sky.background-clouds, #hang-room-sky-overlay.background-clouds {
+	min-height: 139.4vw; /* Aspect ratio of image * 100 */
 	background-color: #b2e3ff;
-	background-image: url('graphics/5-collage-animation.gif');
+	background-image: url('graphics/topsection_only_clouds_only_photo.jpg');
 }
 
 #hang-room-sky.background-stars, #hang-room-sky-overlay.background-stars {
+	min-height: 139.4vw; /* Aspect ratio of image * 100 */
 	background-color: #1b0e1a; /* Eyedropped from background */
-	background-image: url('graphics/starry_night.jpg');
+	background-image: url('graphics/topsection_only_stars_only_photo.jpg');
 }
 
 #hang-room-staircase {
