--- a/about/about-style.css
+++ b/about/about-style.css
@@ -7,4 +7,5 @@ body {
     background-image: url('cans_edit_with_white.jpg');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
