--- a/reflections/reflection_style3.css
+++ b/reflections/reflection_style3.css
@@ -29,7 +29,7 @@ body {
     min-height: 710px;
     /*max-height: 1500px;*/
 }
-.container {
+.reflection-container {
 	position: relative;
 }
 .one { 
