Fixed two frames in tapestry room
renamed added underscores large_frame_1.png and medium_square_frame_2.png

--- a/tapestry/tapestry_style.css
+++ b/tapestry/tapestry_style.css
@@ -101,7 +101,7 @@ body {
 #ab3_large_frame {
 	width: 680px;
     height: 650px;
-	background-image: url(/tapestry/graphics/large_frame.png);
+	background-image: url("/tapestry/graphics/large_frame.png");
 	left: 1500px;
 }
 
