--- a/cave/cave_style.css
+++ b/cave/cave_style.css
@@ -214,7 +214,7 @@ body {
 	padding: 20%;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(graphics/Gold_2_Dark.png);
+	background: url(/graphics/frames/Gold_2_Dark.png);
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
