--- a/cave/cave_style.css
+++ b/cave/cave_style.css
@@ -83,7 +83,7 @@ body {
 	align-items: center;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_Frame_Black.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -103,7 +103,7 @@ body {
 	align-items: center;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_Frame_Black.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -121,7 +121,7 @@ body {
 	padding: 20%;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_6_Gold.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -140,7 +140,7 @@ body {
 	padding: 20%;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_6_Gold.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -158,7 +158,7 @@ body {
 	padding: 20%;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_3_Gold.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -177,7 +177,7 @@ body {
 	padding: 20%;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_3_Gold.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -195,7 +195,7 @@ body {
 	padding: 20%;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_Simple.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -214,7 +214,7 @@ body {
 	padding: 20%;
 	justify-content: center;
 /*  	align-items: center;*/
-	background: url(/graphics/Frames/Gold_2_Dark.png);
+	background: url("/graphics/Frames/Gold_Simple.png");
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
