rotating arrows added
put in rotating arrows

--- a/reflections/reflection_style4.css
+++ b/reflections/reflection_style4.css
@@ -90,7 +90,7 @@ body {
 }
 
 #previous {
-	background-image: url('reflection/arrow_left.png');
+	background-image: url('rotate_arrow_clockwise.png');
 	left: 10px;
 }
 
