--- a/reflections/reflection_style1.css
+++ b/reflections/reflection_style1.css
@@ -97,3 +97,10 @@ a {
 	left: -40px;
 	top: 150px;
 }
+
+
+#frame5 {
+	background-image: url('reflection/Plinth.png');
+	left: 100px;
+	top: 50px;
+}
