trying with frames
trying with frames

--- a/reflections/reflection_style.css
+++ b/reflections/reflection_style.css
@@ -51,7 +51,7 @@ body {
 }
 
 #frame4 {
-	background-image: url('graphics/reflection/r1_frame1_right.png');
+	background-image: url('graphics/reflection/R1/R1_F1_RHS');
 	position: relative;
 	text-align: center;
     height: 200px;
