--- a/reflections/reflection_style1.css
+++ b/reflections/reflection_style1.css
@@ -97,7 +97,7 @@ a {
 }
 
 #frame4 {
-	background-image: url('reflection/r1_frame2_right.png');
+	background-image: url('reflection/r1/R1_F1_RHS.png');
 	right: 0px;
 }
 
