updating frames for mid right
updating frames for mid right

--- a/reflections/reflection_style1.css
+++ b/reflections/reflection_style1.css
@@ -108,7 +108,7 @@ a {
 }
 
 #frame3 {
-	background-image: url('reflection/Frame_1_mid_rhs.png');
+	background-image: url('reflection/r1/R1_F2_RHS.png');
 	left: -200px;
 	top: 150px;
 }
