--- a/reflections/reflection_style1.css
+++ b/reflections/reflection_style1.css
@@ -102,7 +102,7 @@ a {
 }
 
 #frame2 {
-	background-image: url('reflection/Frame_1_mid_lhs.png');
+	background-image: url('reflection/r1/R1_F2_LHS.png');
 	right: -40px;
 	top: 150px;
 }
