Revert "putting plinths back in, removing scaled"

--- a/reflections/reflection_style1.css
+++ b/reflections/reflection_style1.css
@@ -28,8 +28,11 @@ a {
 	gap: 0px 0px; 
 	grid-template-areas: 
     "one two three four"; 
+    /*min-height: 80px;*/
+    /*min-height: 800px;*/
     min-width: 1330px;
     min-height: 650px;
+    /*max-height: 1500px;*/
 }
 
 .reflection-container {
@@ -110,20 +113,15 @@ a {
 	top: 150px;
 }
 
-#PLINTH_RHS {
+#frame5 {
 	background-image: url('reflection/Plinth.png');
 	left: -400px;
 	top: 100px;
 }
 
-#PLINTH_LHS {
+#frame6 {
 	background-image: url('reflection/Plinth.gif');
 	left: -100px;
 	top: 100px;
 }
 
-div {
-	width: 80px;
-	height: 80px;
-	background-color: skyblue;
-  }
